force-app/main/default/objects/Data_Fixer_Job_Setting__c/Data_Fixer_Job_Setting__c.object-meta.xml
<CustomObject>
    <description>Configuration setting for the on-demand or schedulable data-fix jobs.</description>
    <label>Data Fixer Job Setting</label>
    <nameField>
        <label>Data Fixer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Fixer Job Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>