force-app/main/default/objects/Data_Fixer_Job_Setting__c/fields/I_RS_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active jobs will run. Uncheck this to take a job offline.</description>
    <inlineHelpText>Only active jobs will run. Uncheck this to take a job offline.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>