force-app/main/default/objects/Data_Fixer_Job_Setting__c/fields/I_RS_New_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Field_Values__c</fullName>
    <inlineHelpText>Use JSON array syntax, (e.g. [{},{}]. Only string values allowed.

Required keys are fieldName, dataType and newValue.

Valid dataType options: text, number, date, time and boolean.

Only valid date is &quot;TODAY&quot;. Only valid time is &quot;NOW&quot;.</inlineHelpText>
    <label>New Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>