force-app/main/default/objects/Data_Fixer_Job_Setting__c/fields/I_RS_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Name__c</fullName>
    <description>Object being modified</description>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>