force-app/main/default/objects/Data_Fixer_Job_Setting__c/fields/I_RS_Record_Filter__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_Filter__c</fullName>
    <inlineHelpText>Use SOQL filter syntax. Only records meeting the criteria will be processed. Relative date expressions will be based on the time the job runs, not the time the job is enqueued/scheduled.</inlineHelpText>
    <label>Record Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>