force-app/main/default/objects/Data_Fixer_Job_Setting__c/fields/I_RS_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Unique_Identifier__c</fullName>
    <description>The unique key to supply to the data jobs. This means you are able to change the standard Name field on-demand without breaking the dependency.</description>
    <label>Unique Identifier</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>